--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,6 @@
 services:
   - name: your-streamlit-app
     env: python=3.8
-    startCommand: streamlit run your_app.py
+    startCommand: streamlit run main.py
     github:
       branch: main
