--- a/app.yaml
+++ b/app.yaml
@@ -5,3 +5,6 @@ runtime_config:
   python_version: 3
 
 entrypoint: streamlit run streamlit-app.py --server.port $PORT
+
+automatic_scaling:
+  max_num_instances: 1
