--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,3 @@
-runtime: python
-env: flex
+runtime: python39
 
-runtime_config:
-  python_version: 3
-
-entrypoint: streamlit run streamlit-app.py --server.port $PORT
-
-automatic_scaling:
-  max_num_instances: 1
+entrypoint: streamlit run main.py --server.enableCORS false --browser.serverAddress 0.0.0.0 --browser.gatherUsageStats false --server.port $PORT
